syntax = "proto3";

package pb;

option go_package = "../pb";
import "proto/entities/geo.proto";

service GeoService {
  rpc UploadGeo(GeoChunkRequest) returns (GeoChunkResponse) {};
  rpc CreateGeo(GeoRequest) returns (GeoResponse) {};
  rpc RetrieveGeo(GeoRequest) returns (GeoResponse) {};
  rpc RetrieveGeos(GeoEmptyRequest) returns (GeosResponse) {};
  rpc UpdateGeo(GeoRequest) returns (GeoResponse) {};
  rpc DeleteGeo(GeoRequest) returns (GeoResponse) {};
}

// Messages
message Chunk {
  bytes content = 1;
}

message GeoChunkRequest {
  Chunk chunk = 1;
}

message GeoChunkResponse {
  bool ok = 1;
}

message GeoRequest {
  Geo geo = 1;
}

message GeoResponse {
  Geo geo = 1;
}

message GeosResponse {
  repeated Geo geos = 1;
}

message GeoEmptyRequest{}