syntax = "proto3";
package pb;
option go_package = "../pb";

import "google/protobuf/empty.proto";

service GeoReaderService {
  rpc RetrieveTreeGeo(google.protobuf.Empty) returns (GeoTreeResponse) {};
  rpc CreateTreeDirectory(google.protobuf.Empty) returns (GeoTreeResponse) {};
  rpc UpdateTreeDirectory(google.protobuf.Empty) returns (GeoTreeResponse) {};
  rpc CreateTreeGeo(google.protobuf.Empty) returns (CreateTreeGeoResponse) {};
  rpc CheckChangesTreeGeo(google.protobuf.Empty) returns (stream ChangesGeoNotificationResponse) {};
  rpc AutomaticallyExecuteChangeTreeGeo(google.protobuf.Empty) returns (AutomaticallyExecuteChangeTreeGeoResponse) {};
}

// Messages
message ChangeFile {
  string path = 1;
  string file = 2;
  string directory = 3;
  string state = 4;
}

message MessageError {
  string path = 1;
  string message = 2;
}

message GeoTreeResponse {
  bool status = 1;
  string message = 2;
  string geo = 3;
  repeated MessageError errors = 4;
}

message CreateTreeGeoResponse {
  bool status = 1;
  string message = 2;
  repeated MessageError errors = 3;
}

message CheckChangesTreeGeoResponse {
  bool status = 1;
  bool change = 2;
  bool firstLoad = 3;
  string message = 4;
  repeated ChangeFile changeFiles = 5;
}

message NotificationDTS {
  string title = 1;
  string message = 2;
}

message ChangesGeoNotificationResponse {
  bool status = 1;
  repeated NotificationDTS notifications = 2;
}

message AutomaticallyExecuteChangeTreeGeoResponse {
  bool status = 1;
  string message = 2;
}